test/integration/unsolved_syntax_issues/no_program_name.pal
{2,5,7}
program (intput, output)
begin
	a := 1;
	2 = 1;			// error
end				// error
